<resources>
    <string name="app_name">MyMovies</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Settings</string>
    <string name="something_wrong">Oops... something wrong</string>
    <string name="searchbar_hint">Search movies here..</string>
    <string name="description">Description</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="release_date">Release date: %s</string>
    <string name="popularity">Popularity: %s</string>
    <string name="search">Search</string>
    <string name="no_data">Empty Data</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="theme_setting">Setting Theme</string>
    <string name="dark_mode">Dark Mode</string>

</resources>